less/documentDB.less
/* ... */
.activemenu {
  color: #fff;
}

.rightarrowimg {
  padding-left: 5px;
  padding-bottom: 2px;
}

.underlinedLink {
  text-decoration: underline !important;
  color: @SelectionColor;
}

a:hover,
a:visited,
a:active,
a:link {
  text-decoration: none;
}

.nav > li > a:focus {
  background-color: white;
  outline: none;
}

.iconpadclick {
  background-color: #e6e6e6;
  cursor: pointer;
  border: 1px solid #1ebbee;
  padding: 5px;
}

.divimgleftarrow {
  display: inline-block;
  margin-top: 16px;
  margin-right: 10px;
}

.divimgleftarrow:hover {
  background-color: #e6e6e6;
  cursor: pointer;
  border: 1px solid #1ebbee;
}

.adddeliconspan {
  display: none;
  float: right;
  padding: 5px;
}

.spanparent:hover .adddeliconspan {
  display: inline;
}

.spanchild:hover .adddeliconspan {
  display: inline;
}

.collectiontitle {
  font-size: 14px;
  text-transform: uppercase;
}

.coltitle {
  background: white;
  text-align: justify;
  padding: @SmallSpace 0px @DefaultSpace 0px;
}

.titlepadcol {
  padding-left: 20px;
  font-weight: 500;
  height: 28px;
  display: inline-block;
  padding-top: 5px;
}

.padimgcolrefresh {
  padding: 0px 0px 4px 4px;
}

.padimgcolrefresh:hover {
  background: @BaseLow;
}

.padimgcolrefresh:active {
  background: @AccentMediumLow;
  outline: none;
}

.refreshcol {
  cursor: pointer;
  width: 14px;
  height: 14px;
}

.refreshcol:focus {
  border: Solid 1px @AccentMediumHigh;
}

.refreshcol1 {
  cursor: pointer;
  width: 16px;
  height: 16px;
}

.padimgcolrefresh1 {
  padding: 0px 4px 4px 4px;
}

.padimgcolrefresh1:hover {
  background-color: @BaseLow;
}

.padimgcolrefresh1:active {
  background-color: @AccentMediumLow;
  outline: none;
}

.btnmainslide {
  height: 14px;
  margin-top: 14px;
  cursor: pointer;
}

.well {
  padding: 19px 0px;
  padding-top: 0px;
  margin-bottom: 20px;
  border: 0px;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0);
  background: white;
}

.splitter,
.ui-resizable-handle.ui-resizable-e {
  z-index: 1;
  width: 5px;
  border-right: 1px solid @BaseMedium;
  border-bottom: none;
  padding: 0px;
  background-color: @BaseLight;
}

.splitter,
.ui-resizable-handle.ui-resizable-s {
  z-index: 1;
  height: 5px;
  border-bottom: 1px solid @BaseMedium;
  border-right: none;
  padding: 0px;
  background-color: transparent;
}

.ui-resizable-helper {
  border: 1px dotted;
}

.testClass {
  padding-left: 30px;
}

.level {
  padding-left: 16px;
  padding-top: 0px;
}

.tabCommandButton {
  border-bottom: 1px solid #ddd;
  box-sizing: border-box;
  padding-left: @DefaultSpace;
  .flex-display();
  flex: 0 0 auto;
}

.imgiconwidth {
  margin-right: 5px;
}

.id {
  padding-left: 8px;
  color: #000;
  font-weight: bold;
  margin-left: 6px;
}

.documentsGridHeaderContainer {
  padding-left: 5px;
  width: 100%;
  border-bottom: 1px solid #cccccc;
}

.documentsGridHeaderContainer > table {
  width: 100%;
  table-layout: fixed;
  border-collapse: unset;
}

.documentsGridHeaderContainer table thead tr {
  position: sticky;
  top: 0;
  th {
    position: sticky;
    top: 0;
    background-color: #fff !important;
    border-bottom: 1px solid #cccccc !important;
  }
}

.documentsGridHeader {
  padding-left: 8px;
  color: #000;
  font-weight: bold;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: default;
  width: 45%;
}

.refreshColHeader {
  padding: 3px 6px 10px 0px !important;
}

.refreshColHeader:hover {
  background-color: @BaseLow;
}

.refreshColHeader:active {
  background-color: @AccentMediumLow;
}

.refreshColHeader .refreshcol {
  float: right;
}

.fixedWidthHeader {
  width: 82px;
}

// .tabdocuments .scrollable {
//   height: 100%;
//   overflow-y: auto;
//   overflow-x: hidden;
//   padding-left: 5px;
//   padding-right: 5px;
//   width: 100%;
// }

// .tabdocuments > .tabdocumentsGridElement {
//   width: 50%;
// }

// .tabdocuments > .evenlySpacedHeader {
//   width: 30%;
// }

// .tabdocuments.scrollable:focus,
// .tabdocuments.scrollable:active {
//   outline: 1px dotted;
// }

// .tabdocuments .scrollable table td {
//   white-space: nowrap;
//   overflow: hidden;
//   text-overflow: ellipsis;
// }

.mongoDocumentEditor .monaco-editor.vs .redsquiggly {
  display: none !important;
}

.monaco-editor .quick-input-list-label {
  /* Restore some of Monaco's default styles that are clobbered by our global styles */
  padding: 0;
  line-height: 22px;
}

.monaco-editor .quick-input-list .highlight {
  /* Padding in highlighted text within the quick input list breaks the flow of the text */
  padding: 0;
}

td a {
  color: #393939;
}

td a:hover {
  color: #393939;
}

.loadMore {
  display: block;
  width: 100%;
  text-align: center;
}

.loadMore > a:focus {
  outline: 1px dotted;
}

#content.active .tabdocuments .scrollable {
  height: 100%;
  overflow-y: auto;
}

.table-fixed thead {
  width: 97%;
  padding-left: 18px;
}

.table-fixed tbody {
  height: 510px;
  overflow-y: auto;
  width: 100%;
  overflow-x: hidden;
}

.table-fixed thead,
.table-fixed tbody,
.table-fixed tr,
.table-fixed td,
.table-fixed th {
  display: block;
}

.table-fixed tbody td,
.table-fixed thead > tr > th {
  float: left;
  border-bottom-width: 0;
}

a:hover,
a:visited,
a:active,
a:link {
  text-decoration: none;
}

.tabsManagerContainer {
  height: 100%;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  min-height: 300px;
  overflow-y: scroll;
  min-width: 800px;
}

.tabs {
  position: relative;
  margin: 15px 0 25px 0;
  display: table;
  width: 100%;
}

.tab {
  float: left;
}

.tab label {
  border: 1px solid #bbbbbb;
  margin-left: -1px;
  position: inherit;
  left: 1px;
  color: #393939;
}

.tab [type="radio"] {
  display: none;
}

.tabcontent {
  clear: both;
  left: 0;
  right: 0;
  bottom: 0;
  padding: @MediumSpace 0px;
}

.tab [type="radio"]:checked ~ label {
  border: 1px solid #0072c6;
  background-color: @AccentMediumHigh;
  color: white;
  z-index: 2;
}
/* ... */

